--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            border-radius: 15px;
         }
 
         #label {
@@ -13,6 +14,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-family: Georgia, 'Times New Roman', Times, serif;
-
+            font-family: American Typewriter, serif;
         }
+
+      
